--- a/package.json
+++ b/package.json
@@ -20,38 +20,38 @@
     "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
+    "@xstate/react": "^4.1.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.11",
     "next": "^15.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "xstate": "^5.18.2",
-    "@xstate/react": "^4.1.3",
-    "framer-motion": "^11.11.11",
-    "date-fns": "^4.1.0",
     "react-hook-form": "^7.53.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "xstate": "^5.18.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.2",
+    "@tailwindcss/forms": "^0.5.9",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^22.8.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "typescript": "^5.6.3",
-    "tailwindcss": "^3.4.14",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20",
-    "@tailwindcss/forms": "^0.5.9",
-    "tailwindcss-animate": "^1.0.7",
-    "vitest": "^2.1.4",
-    "@vitest/ui": "^2.1.4",
     "@vitejs/plugin-react": "^4.3.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@playwright/test": "^1.48.2",
+    "@vitest/ui": "^2.1.4",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.3",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8"
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
   }
 }
