--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clean": "rm -rf .next node_modules"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@xstate/react": "^4.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
