test(infra): setup happy-dom and jest-dom for component tests
- Install happy-dom as alternative to jsdom
- Create vitest.setup.ts with @testing-library/jest-dom matchers
- Configure vitest to use happy-dom for .test.tsx files
- Add environmentMatchGlobs for automatic environment selection

Related to Story 6.4c

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.0.3",
+    "happy-dom": "^20.0.7",
     "jsdom": "^27.0.1",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
