--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
     "next": "^15.0.3",
+    "openai": "^6.6.0",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
