--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ NEXT_PUBLIC_XSTATE_INSPECT=true
 # Feature flags
 NEXT_PUBLIC_ENABLE_STORY_MODE=true
 NEXT_PUBLIC_ENABLE_ANALYTICS=false
+NEXT_PUBLIC_ENABLE_OPENAI_STORIES=true
 
 # OpenAI Configuration
 # Get your API key from https://platform.openai.com/api-keys
