--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.53.2",
     "tailwind-merge": "^2.5.4",
-    "xstate": "^5.18.2"
+    "xstate": "^5.18.2",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
