--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@playwright/test": "^1.48.2",
     "@tailwindcss/forms": "^0.5.9",
     "@testing-library/jest-dom": "^6.6.3",
