--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fast-levenshtein": "^3.0.0",
     "framer-motion": "^11.11.11",
+    "natural": "^8.1.0",
     "next": "^15.0.3",
     "openai": "^6.6.0",
     "react": "^19.0.0",
@@ -44,6 +46,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/fast-levenshtein": "^0.0.4",
+    "@types/natural": "^6.0.1",
     "@types/node": "^22.8.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
