--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@xstate/react": "^4.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "compromise": "^14.14.4",
     "date-fns": "^4.1.0",
     "fast-levenshtein": "^3.0.0",
     "framer-motion": "^11.11.11",
