--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "fast-levenshtein": "^3.0.0",
     "framer-motion": "^11.11.11",
+    "lodash": "^4.17.21",
     "natural": "^8.1.0",
     "next": "^15.0.3",
     "openai": "^6.6.0",
@@ -48,6 +49,7 @@
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/fast-levenshtein": "^0.0.4",
+    "@types/lodash": "^4.17.20",
     "@types/natural": "^6.0.1",
     "@types/node": "^22.8.6",
     "@types/react": "^18.3.12",
