--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:all": "npm run type-check && npm run lint && vitest run && playwright test",
-    "clean": "rm -rf .next node_modules"
+    "clean": "rm -rf .next node_modules",
+    "process-words": "pnpm dlx tsx scripts/process-words.ts"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.7",
