--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "compromise": "^14.14.4",
+    "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
     "fast-levenshtein": "^3.0.0",
     "framer-motion": "^11.11.11",
